fix overflow

--- a/static/css/frederikring.less
+++ b/static/css/frederikring.less
@@ -6,6 +6,7 @@ body{
 	width: 100%;
 	min-width: 320px;
 	margin: auto;
+    overflow: hidden;
 }
 
 h6{
